--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,15 @@
-/* General Styles */
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #222;
+    background: linear-gradient(rgba(0, 0, 0, 0.921), rgba(0, 0, 0, 0.877)), url('../img/logo-sj.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: white;
     line-height: 1.6;
+    width: 100%;
+    height: 100%;
   }
   
   h1, h2, h3, h4, h5, h6 {
@@ -34,7 +38,6 @@ body {
     opacity: 0.8;
   }
   
-  /* Viewer Container */
   .viewer-container {
     width: 100%;
     height: 60vh;
@@ -50,7 +53,6 @@ body {
     height: 100%;
   }
   
-  /* Caption */
   .caption {
     margin-top: 1rem;
   }
@@ -64,13 +66,20 @@ body {
     font-size: 0.9rem;
   }
   
-  /* Content Card */
   .content-card {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 12px;
     padding: 2rem;
     height: 100%;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+    max-height: 550px;
+    overflow-y: auto; 
+    color: white;
+    scrollbar-width: none; 
+    -ms-overflow-style: none;  
+  }
+  .content-card::-webkit-scrollbar {
+    display: none; 
   }
   
   .content-card h2 {
@@ -117,3 +126,39 @@ body {
       font-size: 1.8rem;
     }
   }
+
+#next-button {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  background: transparent;
+  border: none;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 1000;
+  user-select: none;
+  transition: color 0.3s ease;
+}
+.custom-btn {
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+  color: #ffffff; 
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.custom-btn:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+  transform: scale(1.05);
+  color: #ffffff;
+}
+
+.slider-controls {
+  text-align: center;
+  margin-top: 1rem;
+}
